fix magic prompt, paint, and artwork save (#146)
* fix magic prompt not new generation, infinite loop

* use "WorkerCpu": 1 for magic prompt

* fix redirect with paint

* fix s3 copy error on save

* hide side nav scrollbar on firefox

* add ellipsis to artwork title

--- a/morpheus-client/components/ArtworkCard/ArtworkDetails/ArtworkDetails.module.scss
+++ b/morpheus-client/components/ArtworkCard/ArtworkDetails/ArtworkDetails.module.scss
@@ -19,6 +19,10 @@
 
   .title {
     margin-bottom: 24px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
   }
 
   .prompt {
